Add : libuuid.so libgpt.so for android21-arm64-v8a

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -15,7 +15,7 @@ project("my_application_c")
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
-        agisk-dev
+        agisk-cli
 
         # Sets the library as a shared library.
         SHARED
@@ -30,31 +30,90 @@ add_library( # Sets the name of the library.
         DiskActions.h
         )
 
-add_library(
-        agisk
-        SHARED
+#add_library(gpt STATIC IMPORTED)
+#set_target_properties(gpt PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libgpt.a)
+#include_directories(${CMAKE_SOURCE_DIR}/include/)
+#
+#add_library(uuid STATIC IMPORTED)
+#set_target_properties(uuid PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/libs/${ANDROID_ABI}/libuuid.a)
+#include_directories(${CMAKE_SOURCE_DIR}/include/)
 
-        gptfdisk/*
+#file(GLOB agisk-src
+#        "agisk/*.hpp"
+#        "agisk/*.cpp"
+#        "include/gpt/*.h"
+#        )
+#
+#add_library(agisk
+#        SHARED
+#        ${agisk-src}
+#        )
 
-        IMPORTED
-)
-set_target_properties( # Specifies the target library.
-        agisk
 
-        # Specifies the parameter you want to define.
-        PROPERTIES IMPORTED_LOCATION
-
-        # Provides the path to the library you want to import.
-        libs/libuuid.so)
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
 # default, you only need to specify the name of the public NDK library
 # you want to add. CMake verifies that the library exists before
 # completing its build.
 
+
+add_library(
+        #指定目标导入库.
+        gpt
+
+        #设置导入库的类型（静态或动态） 为 shared library.
+        SHARED
+
+        #告知 CMake imported-lib 是导入的库
+        IMPORTED
+)
+
+set_target_properties(
+        # 指定目标导入库
+        gpt
+        # 指定属性（本地导入的已有库）
+        PROPERTIES IMPORTED_LOCATION
+        # 指定你要导入库的路径.
+        ${CMAKE_SOURCE_DIR}/libs/${ANDROID_ABI}/libgpt.so)
+
+add_library(
+        #指定目标导入库.
+        c++_shared
+
+        #设置导入库的类型（静态或动态） 为 shared library.
+        SHARED
+
+        #告知 CMake imported-lib 是导入的库
+        IMPORTED
+)
+
+set_target_properties(
+        # 指定目标导入库
+        c++_shared
+        # 指定属性（本地导入的已有库）
+        PROPERTIES IMPORTED_LOCATION
+        # 指定你要导入库的路径.
+        ${CMAKE_SOURCE_DIR}/libs/${ANDROID_ABI}/libc++_shared.so)
+
+add_library(
+        #指定目标导入库.
+        uuid
+        #设置导入库的类型（静态或动态） 为 shared library.
+        SHARED
+        #告知 CMake imported-lib 是导入的库
+        IMPORTED
+)
+
+set_target_properties(
+        # 指定目标导入库
+        uuid
+        # 指定属性（本地导入的已有库）
+        PROPERTIES IMPORTED_LOCATION
+        # 指定你要导入库的路径.
+        ${CMAKE_SOURCE_DIR}/libs/${ANDROID_ABI}/libuuid.so)
+
 find_library( # Sets the name of the path variable.
         log-lib
-
         # Specifies the name of the NDK library that
         # you want CMake to locate.
         log)
@@ -63,11 +122,12 @@ find_library( # Sets the name of the path variable.
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
+
 target_link_libraries( # Specifies the target library.
-        agisk-dev
-        agisk
+        agisk-cli
+        gpt
+        uuid
+        c++_shared
         # Links the target library to the log library
         # included in the NDK.
         ${log-lib})
-
-include_directories(src/main/cpp/include/)
