--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,18 +15,22 @@ android {
 
         ndk{
             moduleName "cpp"
-            abiFilters "armeabi-v7a","arm64-v8a","x86"
+            abiFilters "arm64-v8a"
         }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
                 cppFlags '-std=c++11'
-
             }
         }
 
 
 
+    }
+    sourceSets {
+        main{
+            jni.srcDirs = []
+        }
     }
 
     buildTypes {
