Add xmls/PartDump.xml for example 	output /sdcard/partdump.log NOTE: Only android-21-arm64-v8a supported !

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -28,6 +28,8 @@ add_library( # Sets the name of the library.
         PartitionActions.cpp
         PartitionActions.h
         DiskActions.h
+        MyLog.cpp
+        MyLog.h
         )
 
 #add_library(gpt STATIC IMPORTED)
