--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,6 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0' // ViewPager 2 需要使用 RecycleView 的 adapter
 
+    implementation 'com.github.pratikbutani:MultiSelectSpinner:1.0.1'
+
 }
