--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="atms.app.my_application_c">
 
     <application
-        android:name=".MyApplication"
+        android:name="atms.app.my_application_c.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,13 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.My_Application_c">
         <activity
-            android:name=".SettingsActivity"
+            android:name="atms.app.my_application_c.SettingsActivity"
             android:exported="false"
             android:label="@string/title_activity_settings" />
         <activity
-            android:name=".aidl.workClientActivity"
+            android:name="atms.app.my_application_c.aidl.workClientActivity"
             android:exported="true" />
-        <activity android:name=".MainActivity">
+        <activity android:name="atms.app.my_application_c.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
