--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 android {
     compileSdkVersion 30
     defaultConfig {
-        applicationId "atms.app.my_application_c"
+        applicationId "atms.app.agiskclient"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
