--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 android.injected.testOnly=false
 org.gradle.unsafe.configuration-cache=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
