--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,10 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.activity:activity-ktx:1.3.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+
+
     implementation 'com.github.arcadefire:nice-spinner:1.4.4'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
