--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     implementation 'com.github.evrencoskun:TableView:v0.8.9.4'
 
     
-    implementation 'com.github.arcadefire:nice-spinner:1.4.4'
+    implementation 'com.github.arcadefire:nice-spinner:1.4.5'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
     implementation composeBom
@@ -118,6 +118,7 @@ repositories {
 
 }
 dependencies {
+    implementation 'com.google.android.material:material:1.9.0' // Make sure the version is up-to-date
 
     implementation 'androidx.preference:preference:1.1.1'
     implementation "net.grandcentrix.tray:tray:0.12.0"
