--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,11 +71,10 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.3.0'
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
 
-
-
     implementation 'com.github.evrencoskun:TableView:v0.8.9.4'
 
-    
+    implementation 'io.github.molihuan:pathselector:1.1.16'
+
     implementation 'com.github.arcadefire:nice-spinner:1.4.5'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
