--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ android {
 }
 
 dependencies {
+    implementation 'io.github.medyo:android-about-page:2.0.0'
     implementation 'androidx.activity:activity-ktx:1.3.0'
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
 
