--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,6 +118,9 @@ repositories {
 
 }
 dependencies {
+
+    implementation 'androidx.navigation:navigation-fragment:2.5.2'
+    implementation 'androidx.navigation:navigation-ui:2.5.2'
     implementation 'com.google.android.material:material:1.9.0' // Make sure the version is up-to-date
 
     implementation 'androidx.preference:preference:1.1.1'
