--- a/app/src/main/cpp/agisk/Makefile
+++ b/app/src/main/cpp/agisk/Makefile
@@ -1,7 +1,7 @@
 CFLAGS+=-D_FILE_OFFSET_BITS=64
 #CXXFLAGS+=-Wall -D_FILE_OFFSET_BITS=64 -D USE_UTF16
 CXXFLAGS+=-Wall -D_FILE_OFFSET_BITS=64 
-LDFLAGS+=-L./ --static
+LDFLAGS+=-L./libs --static
 LIB_OBJS=$(LIB_NAMES:=.o)
 MBR_LIB_OBJS=$(MBR_LIBS:=.o)
 LIB_HEADERS=$(LIB_NAMES:=.h)
